@@ -9,6 +9,7 @@ v.Next
 - [PATCH] Deprecated ADAL namespaced AuthenticationSettings#setSecretKey(), #getSecretKey() (#1586)
 - [PATCH] Disregard pageload errors for the non-primary frame during interactive auth (#1603)
 - [PATCH] Updates Nimbus version 8.2 -> 9.9 (#1600)
+- [PATCH] Fix for ADAL cache replication to Msal/Common-Cache (#1616)
 
 Version 3.1.2
 -------------
